[metadata]
name = RoboPainter-ultraflame42
version = 0.2.3
author = ultraflame42
author_email = ultraflame4@gmail.com
description = Attempts to convert an raster image into a svg image using potrace

long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ultraflame4/RoboPainter
project_urls =
    Bug Tracker = https://github.com/ultraflame4/RoboPainter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:

install_requires =
    lxml
    beautifulsoup4~=4.10.0
    opencv-python~=4.5.3.56
    numpy~=1.21.2
    fire~=0.4.0
    scipy~=1.7.1
    tqdm~=4.62.2
python_requires = >=3.9

\